# citadel

./: .gitignore  CMakeLists.txt  README.md
source/: dataframe.hpp
source/SystemLoadCore/: SysInfo.hpp  SysInfoMac.cpp  SysInfoUbuntu.cpp  SystemLoad.cpp  SystemLoad.hpp  SystemLoadCore.cpp  SystemLoadCore.hpp  main.cpp
source/SystemLoadCore/tests/: CMakeLists.txt  SystemLoadCore_tests.cpp
source/UniversalServerUnits/: Exceptions.cpp  Exceptions.hpp  SocketMock.hpp  SocketWrapper.cpp  SocketWrapper.hpp  UniversalServer.cpp  UniversalServer.hpp  UniversalServerCore.hpp  UniversalServerUnits.cpp  UniversalServerUnits.hpp  judge.hpp  utils.cpp  utils.hpp
source/UniversalServerUnits/tests_Exceptions/: CMakeLists.txt  Exceptions_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_json/: CMakeLists.txt  UniversalServerUnits_json_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_readFromSocket/: CMakeLists.txt  UniversalServerUnits_readFromSocket_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_server/: CMakeLists.txt  UniversalServerUnits_server_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_split/: CMakeLists.txt  UniversalServerUnits_split_tests.cpp
source/UniversalServerUnits/tests_UniversalServerUnits_writeToSocket/: CMakeLists.txt  UniversalServerUnits_writeToSocket_tests.cpp
source/UniversalServerUnits/tests_utils/: CMakeLists.txt  utils_tests.cpp
source/UserTerminal/: UserTerminal.cpp  UserTerminal.hpp  main.cpp
source/UserTerminal/tests/: CMakeLists.txt  UserTerminal_tests.cpp
